# Tarea-Extraclase-1

./: CMakeLists.txt
Collector/: CNode.cpp  CNode.h  Collector.cpp  Collector.h  LinkedListC.cpp  LinkedListC.h
Estructure/: LinkedList.cpp  LinkedList.h  Manager.cpp  Manager.h  Node.cpp  Node.h
Main/: main.cpp
